--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,13 @@
 <resources>
 
     <style name="Theme.MovieDb" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
+        <item name="android:statusBarColor">@color/black</item>
     </style>
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="android:windowBackground">@drawable/splash_gradient</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_marca</item>
+        <item name="postSplashScreenTheme">@style/Theme.MovieDb</item>
+    </style>
+
 </resources>
